# wow-patcher

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlint.yaml  .markdownlintignore  .mise.toml  .readthedocs.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  client_support.yml  config.yml  feature_request.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  configuration.md  library.md  patches.md  usage.md
examples/: basic_usage.rs  battlenet_agent.rs  custom_cdn.rs  custom_keys.rs  dry_run.rs
src/: cli.rs  lib.rs  main.rs  patcher.rs
src/binary/: mod.rs  section.rs
src/cmd/: dump.rs  execute.rs  mod.rs  root.rs  version.rs
src/errors/: mod.rs
src/keys/: mod.rs
src/patterns/: mod.rs
src/platform/: darwin.rs  linux.rs  mod.rs  windows.rs
src/trinity/: mod.rs
src/version/: mod.rs
tests/: integration_test.rs
