[package]
name = "wow-patcher"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
authors = ["Daniel S. Reichenbach <daniel@kogit.network>"]
description = "World of Warcraft client patcher for TrinityCore private servers"
repository = "https://github.com/wowemulation-dev/wow-patcher"
license = "MIT OR Apache-2.0"
keywords = ["wow", "warcraft", "trinitycore", "patcher", "binary"]
categories = ["command-line-utilities", "game-development"]

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Binary manipulation
byteorder = "1.5"
memchr = "2.7"
hex = "0.4"
goblin = "0.8"  # PE/Mach-O/ELF parsing for version extraction and code signing
regex = "1.11"  # For version pattern matching in binaries

# Platform detection
cfg-if = "1.0"

# Optional: Command-line interface (only needed for CLI binary)
clap = { version = "4.5", features = ["derive", "cargo", "env"], optional = true }

# Optional: Logging (only needed for CLI binary)
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }

[features]
default = ["cli"]
cli = ["clap", "env_logger", "log"]

[[bin]]
name = "wow-patcher"
path = "src/main.rs"
required-features = ["cli"]

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
# Testing
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
