[package]
name = "wow-patcher"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Daniel S. Reichenbach <daniel@kogit.network>"]
description = "World of Warcraft client patcher for TrinityCore private servers"
repository = "https://github.com/wowemulation-dev/wow-patcher"
license = "MIT OR Apache-2.0"
keywords = ["wow", "warcraft", "trinitycore", "patcher", "binary"]
categories = ["command-line-utilities", "game-development"]

[dependencies]
# Binary manipulation
hex = "0.4"
goblin = "0.10"  # PE/Mach-O/ELF parsing for version extraction and code signing
regex = "1.12"   # For version pattern matching in binaries

# Optional: Command-line interface (only needed for CLI binary)
clap = { version = "4.5", features = ["derive", "cargo", "env"], optional = true }

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "wow-patcher"
path = "src/main.rs"
required-features = ["cli"]

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
